tests/codegen/fail/input-object/derive_no_fields.rs
#[derive(juniper::GraphQLInputObject)]
struct Object {}

fn main() {}
